# swagger.json
@@ -1,515 +1,1 @@
-{
-  "swagger": "2.0",
-  "info": {
-    "title": "Swagger Json",
-    "description": "This is a generated swagger json for your sails project",
-    "termsOfService": "",
-    "contact": {
-      "name": "Nirav Adatiya",
-      "url": "https://github.com/logisticinfotech",
-      "email": "nirav@logisticinfotech.com"
-    },
-    "license": {
-      "name": "Apache 2.0",
-      "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
-    },
-    "version": "1.0.0"
-  },
-  "host": "https://safe-forest-30954.herokuapp.com",
-  "basePath": "/",
-  "schemes": [
-    "http",
-    "https"
-  ],
-  "externalDocs": {
-    "url": "http://www.logisticinfotech.com"
-  },
-  "parameters": {
-    "WhereQueryParam": {
-      "in": "query",
-      "name": "where",
-      "required": false,
-      "type": "string",
-      "description": "This follows the standard from http://sailsjs.com/documentation/reference/blueprint-api/find-where"
-    },
-    "LimitQueryParam": {
-      "in": "query",
-      "name": "limit",
-      "required": false,
-      "type": "integer",
-      "description": "The maximum number of records to send back (useful for pagination). Defaults to undefined"
-    },
-    "SkipQueryParam": {
-      "in": "query",
-      "name": "skip",
-      "required": false,
-      "type": "integer",
-      "description": "The number of records to skip (useful for pagination)."
-    },
-    "SortQueryParam": {
-      "in": "query",
-      "name": "sort",
-      "required": false,
-      "type": "string",
-      "description": "The sort order. By default, returned records are sorted by primary key value in ascending order. e.g. ?sort=lastName%20ASC"
-    },
-    "PopulateQueryParam": {
-      "in": "query",
-      "name": "populate",
-      "required": false,
-      "type": "string",
-      "description": "check for better understanding -> http://sailsjs.com/documentation/reference/blueprint-api/find-where"
-    },
-    "PageQueryParam": {
-      "in": "query",
-      "name": "page",
-      "required": false,
-      "type": "integer",
-      "description": "This helps with pagination and when the limit is known"
-    },
-    "SelectQueryParam": {
-      "in": "query",
-      "name": "select",
-      "required": false,
-      "type": "string",
-      "description": "This helps with what to return for the user and its \",\" delimited"
-    },
-    "TokenHeaderParam": {
-      "in": "header",
-      "name": "token",
-      "required": false,
-      "type": "string",
-      "description": "Incase we want to send header information along our request"
-    },
-    "IDPathParam": {
-      "in": "path",
-      "name": "id",
-      "required": true,
-      "type": "string",
-      "description": "This is to identify a particular object out"
-    },
-    "PerPageQueryParam": {
-      "in": "query",
-      "name": "perPage",
-      "required": false,
-      "type": "integer",
-      "description": "This helps with pagination and when the limit is known for pagify"
-    }
-  },
-  "paths": {
-    "/api/": {
-      "get": {
-        "tags": [
-          "Api"
-        ],
-        "summary": "",
-        "consumes": [
-          "application/json"
-        ],
-        "produces": [
-          "application/json"
-        ],
-        "responses": {
-          "200": {
-            "description": "The requested resource"
-          },
-          "404": {
-            "description": "Resource not found"
-          },
-          "500": {
-            "description": "Internal server error"
-          }
-        },
-        "security": [
-          {
-            "Authorization": []
-          }
-        ]
-      }
-    },
-    "/api/user/register": {
-      "post": {
-        "tags": [
-          "Api"
-        ],
-        "summary": "",
-        "consumes": [
-          "application/json"
-        ],
-        "produces": [
-          "application/json"
-        ],
-        "responses": {
-          "200": {
-            "description": "The requested resource"
-          },
-          "404": {
-            "description": "Resource not found"
-          },
-          "500": {
-            "description": "Internal server error"
-          }
-        },
-        "security": [
-          {
-            "Authorization": []
-          }
-        ],
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "description": "An object defining our schema for this request",
-            "schema": {
-              "properties": {
-                "fullName": {
-                  "type": "string"
-                },
-                "email": {
-                  "type": "string"
-                },
-                "password": {
-                  "type": "string"
-                }
-              },
-              "required": [
-                "fullName",
-                "email",
-                "password"
-              ]
-            }
-          }
-        ]
-      }
-    },
-    "/api/user/login": {
-      "post": {
-        "tags": [
-          "Api"
-        ],
-        "summary": "",
-        "consumes": [
-          "application/json"
-        ],
-        "produces": [
-          "application/json"
-        ],
-        "responses": {
-          "200": {
-            "description": "The requested resource"
-          },
-          "404": {
-            "description": "Resource not found"
-          },
-          "500": {
-            "description": "Internal server error"
-          }
-        },
-        "security": [
-          {
-            "Authorization": []
-          }
-        ],
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "description": "An object defining our schema for this request",
-            "schema": {
-              "properties": {
-                "email": {
-                  "type": "string"
-                },
-                "password": {
-                  "type": "string"
-                }
-              },
-              "required": [
-                "email",
-                "password"
-              ]
-            }
-          }
-        ]
-      }
-    },
-    "/api/user/logout": {
-      "post": {
-        "tags": [
-          "Api"
-        ],
-        "summary": "",
-        "consumes": [
-          "application/json"
-        ],
-        "produces": [
-          "application/json"
-        ],
-        "responses": {
-          "200": {
-            "description": "The requested resource"
-          },
-          "404": {
-            "description": "Resource not found"
-          },
-          "500": {
-            "description": "Internal server error"
-          }
-        },
-        "security": [
-          {
-            "Authorization": []
-          }
-        ],
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "description": "An object defining our schema for this request",
-            "schema": {
-              "properties": {},
-              "required": []
-            }
-          }
-        ]
-      }
-    },
-    "/api/tasks": {
-      "get": {
-        "tags": [
-          "Api"
-        ],
-        "summary": "",
-        "consumes": [
-          "application/json"
-        ],
-        "produces": [
-          "application/json"
-        ],
-        "responses": {
-          "200": {
-            "description": "The requested resource"
-          },
-          "404": {
-            "description": "Resource not found"
-          },
-          "500": {
-            "description": "Internal server error"
-          }
-        },
-        "security": [
-          {
-            "Authorization": []
-          }
-        ]
-      }
-    },
-    "/api/task": {
-      "post": {
-        "tags": [
-          "Api"
-        ],
-        "summary": "",
-        "consumes": [
-          "application/json"
-        ],
-        "produces": [
-          "application/json"
-        ],
-        "responses": {
-          "200": {
-            "description": "The requested resource"
-          },
-          "404": {
-            "description": "Resource not found"
-          },
-          "500": {
-            "description": "Internal server error"
-          }
-        },
-        "security": [
-          {
-            "Authorization": []
-          }
-        ],
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "description": "An object defining our schema for this request",
-            "schema": {
-              "properties": {
-                "title": {
-                  "type": "string"
-                },
-                "description": {
-                  "type": "string"
-                }
-              },
-              "required": [
-                "title"
-              ]
-            }
-          }
-        ]
-      }
-    },
-    "/api/task/{id}": {
-      "get": {
-        "tags": [
-          "Api"
-        ],
-        "summary": "",
-        "consumes": [
-          "application/json"
-        ],
-        "produces": [
-          "application/json"
-        ],
-        "responses": {
-          "200": {
-            "description": "The requested resource"
-          },
-          "404": {
-            "description": "Resource not found"
-          },
-          "500": {
-            "description": "Internal server error"
-          }
-        },
-        "security": [
-          {
-            "Authorization": []
-          }
-        ]
-      },
-      "delete": {
-        "tags": [
-          "Api"
-        ],
-        "summary": "",
-        "consumes": [
-          "application/json"
-        ],
-        "produces": [
-          "application/json"
-        ],
-        "responses": {
-          "200": {
-            "description": "The requested resource"
-          },
-          "404": {
-            "description": "Resource not found"
-          },
-          "500": {
-            "description": "Internal server error"
-          }
-        },
-        "security": [
-          {
-            "Authorization": []
-          }
-        ]
-      }
-    }
-  },
-  "definitions": {
-    "task": {
-      "properties": {
-        "createdAt": {
-          "type": "number"
-        },
-        "updatedAt": {
-          "type": "number"
-        },
-        "id": {
-          "type": "number",
-          "uniqueItems": true
-        },
-        "title": {
-          "type": "string"
-        },
-        "description": {
-          "type": "string"
-        },
-        "user": {}
-      },
-      "required": []
-    },
-    "user": {
-      "properties": {
-        "createdAt": {
-          "type": "number"
-        },
-        "updatedAt": {
-          "type": "number"
-        },
-        "id": {
-          "type": "number",
-          "uniqueItems": true
-        },
-        "fullName": {
-          "type": "string"
-        },
-        "email": {
-          "type": "string",
-          "uniqueItems": true
-        },
-        "password": {
-          "type": "string"
-        },
-        "passwordResetToken": {
-          "type": "string",
-          "description": "A unique token used to verify the user's identity when recovering a password."
-        },
-        "passwordResetTokenExpiresAt": {
-          "type": "number",
-          "description": "A timestamp representing the moment when this user's `passwordResetToken` will expire (or 0 if the user currently has no such token).",
-          "example": 1508944074211
-        }
-      },
-      "required": [
-        "fullName",
-        "email",
-        "password"
-      ]
-    },
-    "archive": {
-      "properties": {
-        "id": {
-          "type": "number",
-          "uniqueItems": true
-        },
-        "createdAt": {
-          "type": "number"
-        },
-        "fromModel": {
-          "type": "string"
-        },
-        "originalRecord": {
-          "type": "json"
-        },
-        "originalRecordId": {
-          "type": "json"
-        }
-      },
-      "required": [
-        "fromModel",
-        "originalRecord"
-      ]
-    }
-  },
-  "securityDefinitions": {
-    "Authorization": {
-      "type": "apiKey",
-      "description": "user JWT Auth Token",
-      "name": "Authorization",
-      "in": "header",
-      "flow": "password"
-    }
-  }
-}
+{"swagger":"2.0","info":{"title":"Swagger Json","description":"This is a generated swagger json for your sails project","termsOfService":"","contact":{"name":"Nirav Adatiya","url":"https://github.com/logisticinfotech","email":"nirav@logisticinfotech.com"},"license":{"name":"Apache 2.0","url":"http://www.apache.org/licenses/LICENSE-2.0.html"},"version":"1.0.0"},"host":"safe-forest-30954.herokuapp.com","basePath":"/","schemes":["https","https"],"externalDocs":{"url":"http://www.logisticinfotech.com"},"parameters":{"WhereQueryParam":{"in":"query","name":"where","required":false,"type":"string","description":"This follows the standard from http://sailsjs.com/documentation/reference/blueprint-api/find-where"},"LimitQueryParam":{"in":"query","name":"limit","required":false,"type":"integer","description":"The maximum number of records to send back (useful for pagination). Defaults to undefined"},"SkipQueryParam":{"in":"query","name":"skip","required":false,"type":"integer","description":"The number of records to skip (useful for pagination)."},"SortQueryParam":{"in":"query","name":"sort","required":false,"type":"string","description":"The sort order. By default, returned records are sorted by primary key value in ascending order. e.g. ?sort=lastName%20ASC"},"PopulateQueryParam":{"in":"query","name":"populate","required":false,"type":"string","description":"check for better understanding -> http://sailsjs.com/documentation/reference/blueprint-api/find-where"},"PageQueryParam":{"in":"query","name":"page","required":false,"type":"integer","description":"This helps with pagination and when the limit is known"},"SelectQueryParam":{"in":"query","name":"select","required":false,"type":"string","description":"This helps with what to return for the user and its \",\" delimited"},"TokenHeaderParam":{"in":"header","name":"token","required":false,"type":"string","description":"Incase we want to send header information along our request"},"IDPathParam":{"in":"path","name":"id","required":true,"type":"string","description":"This is to identify a particular object out"},"PerPageQueryParam":{"in":"query","name":"perPage","required":false,"type":"integer","description":"This helps with pagination and when the limit is known for pagify"}},"paths":{"/api/":{"get":{"tags":["Api"],"summary":"","consumes":["application/json"],"produces":["application/json"],"responses":{"200":{"description":"The requested resource"},"404":{"description":"Resource not found"},"500":{"description":"Internal server error"}},"security":[{"Authorization":[]}]}},"/api/user/register":{"post":{"tags":["Api"],"summary":"","consumes":["application/json"],"produces":["application/json"],"responses":{"200":{"description":"The requested resource"},"404":{"description":"Resource not found"},"500":{"description":"Internal server error"}},"security":[{"Authorization":[]}],"parameters":[{"name":"body","in":"body","required":true,"description":"An object defining our schema for this request","schema":{"properties":{"fullName":{"type":"string"},"email":{"type":"string"},"password":{"type":"string"}},"required":["fullName","email","password"]}}]}},"/api/user/login":{"post":{"tags":["Api"],"summary":"","consumes":["application/json"],"produces":["application/json"],"responses":{"200":{"description":"The requested resource"},"404":{"description":"Resource not found"},"500":{"description":"Internal server error"}},"security":[{"Authorization":[]}],"parameters":[{"name":"body","in":"body","required":true,"description":"An object defining our schema for this request","schema":{"properties":{"email":{"type":"string"},"password":{"type":"string"}},"required":["email","password"]}}]}},"/api/user/logout":{"post":{"tags":["Api"],"summary":"","consumes":["application/json"],"produces":["application/json"],"responses":{"200":{"description":"The requested resource"},"404":{"description":"Resource not found"},"500":{"description":"Internal server error"}},"security":[{"Authorization":[]}],"parameters":[{"name":"body","in":"body","required":true,"description":"An object defining our schema for this request","schema":{"properties":{},"required":[]}}]}},"/api/tasks":{"get":{"tags":["Api"],"summary":"","consumes":["application/json"],"produces":["application/json"],"responses":{"200":{"description":"The requested resource"},"404":{"description":"Resource not found"},"500":{"description":"Internal server error"}},"security":[{"Authorization":[]}]}},"/api/task":{"post":{"tags":["Api"],"summary":"","consumes":["application/json"],"produces":["application/json"],"responses":{"200":{"description":"The requested resource"},"404":{"description":"Resource not found"},"500":{"description":"Internal server error"}},"security":[{"Authorization":[]}],"parameters":[{"name":"body","in":"body","required":true,"description":"An object defining our schema for this request","schema":{"properties":{"title":{"type":"string"},"description":{"type":"string"}},"required":["title"]}}]}},"/api/task/{id}":{"get":{"tags":["Api"],"summary":"","consumes":["application/json"],"produces":["application/json"],"responses":{"200":{"description":"The requested resource"},"404":{"description":"Resource not found"},"500":{"description":"Internal server error"}},"security":[{"Authorization":[]}]},"patch":{"tags":["Api"],"summary":"","consumes":["application/json"],"produces":["application/json"],"responses":{"200":{"description":"The requested resource"},"404":{"description":"Resource not found"},"500":{"description":"Internal server error"}},"security":[{"Authorization":[]}],"parameters":[{"in":"query","name":"completed","required":false,"type":"boolean","description":""}]},"delete":{"tags":["Api"],"summary":"","consumes":["application/json"],"produces":["application/json"],"responses":{"200":{"description":"The requested resource"},"404":{"description":"Resource not found"},"500":{"description":"Internal server error"}},"security":[{"Authorization":[]}]}}},"definitions":{"task":{"properties":{"createdAt":{"type":"number"},"updatedAt":{"type":"number"},"id":{"type":"number","uniqueItems":true},"title":{"type":"string"},"description":{"type":"string"},"completed":{"type":"boolean"},"user":{}},"required":[]},"user":{"properties":{"createdAt":{"type":"number"},"updatedAt":{"type":"number"},"id":{"type":"number","uniqueItems":true},"fullName":{"type":"string"},"email":{"type":"string","uniqueItems":true},"password":{"type":"string"},"passwordResetToken":{"type":"string","description":"A unique token used to verify the user's identity when recovering a password."},"passwordResetTokenExpiresAt":{"type":"number","description":"A timestamp representing the moment when this user's `passwordResetToken` will expire (or 0 if the user currently has no such token).","example":1508944074211}},"required":["fullName","email","password"]},"archive":{"properties":{"id":{"type":"number","uniqueItems":true},"createdAt":{"type":"number"},"fromModel":{"type":"string"},"originalRecord":{"type":"json"},"originalRecordId":{"type":"json"}},"required":["fromModel","originalRecord"]}},"securityDefinitions":{"Authorization":{"type":"apiKey","description":"user JWT Auth Token","name":"Authorization","in":"header","flow":"password"}}}
